--- a/wwwroot/css/homeowners/community.css
+++ b/wwwroot/css/homeowners/community.css
@@ -468,10 +468,11 @@ body {
     display: block;
     font-size: 14px;
     margin-bottom: 2px;
-    padding: 8px;
+    padding: 10px;
+    width: 100%;
     background: var(--light-gray);
     border-radius: 7px;
-    height: 50px;
+    height: auto;
     cursor: pointer;
 }
 
