--- a/wwwroot/css/homeowners/community.css
+++ b/wwwroot/css/homeowners/community.css
@@ -468,11 +468,10 @@ body {
     display: block;
     font-size: 14px;
     margin-bottom: 2px;
-    padding: 10px;
-    width: 100%;
+    padding: 8px;
     background: var(--light-gray);
     border-radius: 7px;
-    height: auto;
+    height: 50px;
     cursor: pointer;
 }
 
