--- a/Views/Homeowner/Community.cshtml
+++ b/Views/Homeowner/Community.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
     var announcementsList = Model.Announcements as List<Announcement> ?? new List<Announcement>();
     var postsList = Model.Posts as List<Post> ?? new List<Post>();
+    var currentUser = ViewBag.CurrentUser as HomeOwner.Models.User; // Properly declare currentUser
 }
 
 <link rel="stylesheet" href="~/css/homeowners/community.css" />
@@ -64,15 +65,18 @@
                             </div>
                         </div>
     
-                            <div class="post-options-container">
-                                <button class="post-options">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </button>
-                                <div class="post-options-menu">
-                                    <button class="edit-post" data-post-id="@post.post_id">Edit</button>
-                                    <button class="delete-post" data-post-id="@post.post_id">Delete</button>
-                                </div>
+                   @if (currentUser != null && post.Author?.user_id == currentUser.user_id)
+                    {
+                        <div class="post-options-container">
+                            <button class="post-options">
+                                <i class="fas fa-ellipsis-h"></i>
+                            </button>
+                            <div class="post-options-menu">
+                                <button class="edit-post" data-post-id="@post.post_id">Edit</button>
+                                <button class="delete-post" data-post-id="@post.post_id">Delete</button>
                             </div>
+                        </div>
+                    }
                         
                     </div>
 
